2014-08-14  Martin Hock  <mhock@apple.com>

        IndexedDB should respect SchemeRegistry's database access setting.
        https://bugs.webkit.org/show_bug.cgi?id=135890
        <rdar://problem/17989469>

        Reviewed by Alexey Proskuryakov.

        Test: storage/indexeddb/open-db-private-browsing.html

        * Modules/indexeddb/IDBFactory.cpp:

2014-08-14  Yoav Weiss  <yoav@yoav.ws>

        srcset with w descriptor doesn't behave as expected when sizes is not supported.
        https://bugs.webkit.org/show_bug.cgi?id=135935

        Reviewed by Dean Jackson.

        In current implementation, if sizes is not supported, when authors would write
        markup such as `<img src=fallback.jpg srcset="100px.jpg 100w, 400px.jpg 400w">`
        the first candidate in srcset would be picked, regardless of its dimensions 
        That is likely to be confusing for authors.
        Dropping these "not yet supported" candidates is likely to be less confusing,
        and will result in the "fallback.jpg" candidate being picked.

        No new tests since this change only concerns builds that are built
        with the PICTURE_SIZES compile flag turned off.

        * html/parser/HTMLSrcsetParser.cpp:
        (WebCore::parseDescriptors):
        Drop candidates that include either 'w' or 'h' descriptors when the
        sizes feature is not supported.

2014-08-14  Antti Koivisto  <antti@apple.com>

        Make inherited style and parent renderer references
        https://bugs.webkit.org/show_bug.cgi?id=135857

        Reviewed by Andreas Kling.

        We don't recurse into non-rendered subtrees anymore so they can't be null.
        Also stop using Element::renderStyle() as it differs from e->renderer().style() in
        some rare cases (that should be fixed).

        * style/StyleResolveTree.cpp:
        (WebCore::Style::RenderTreePosition::parent):
        (WebCore::Style::RenderTreePosition::RenderTreePosition):